--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="newhome_footerdiv_wrapper">
       <div class="col-md-6">
           <div class="newhomefooterlogo">
-              <img src="../assets/images/shaterblockLogo.png" class="newhomenewhomefooterlogo">
+              <img src="../assets/images/shaterblockLogo-ftnew.png" class="newhomenewhomefooterlogo">
           </div>
           <!--<div class="newhomenewsletterblogwrapper">
               <form action="#" method="post" accept-charset="utf-8" id="newhomenewsletterblog">
@@ -16,19 +16,21 @@
           <ul class="newhomefooternavlinks footerborder">
               <li><a [routerLink]="['/']">Home</a></li>
               <li><a [routerLink]="['/whoweare']">Who We Are</a></li>
-              <li><a [routerLink]="['/model-marketing']">Model Management</a></li>
-              <li><a [routerLink]="['/marketing-management']">Marketing Management</a></li>
-              <li><a [routerLink]="['/music-management']">Music Management</a></li>
+              <li><a [routerLink]="['/model-talent-division']">Model | Talent Division</a></li>
+              <li><a [routerLink]="['/clients-campaigns']">Clients & Campaigns<!--Marketing Management--></a></li>
+              <li><a [routerLink]="['/music-division']">Music Division</a></li>
               <li><a [routerLink]="['/contact-us']">Contact Us</a></li>
+              <li><a [routerLink]="['']">Login</a></li>
           </ul>
       </div>
       <div class="col-md-3">
           <h3>Contact Us</h3>
           <p class="newhomecontactaddress footerborder">
-              <span>Lorem Ipsum is,  simply,dummy</span><br>
-              <span>25 of the printing</span><br>
-              <span>Call: 000 000 0000</span><br>
-              <span>Email: <a href="mailto:lorem@ipsum.com" target="_top">lorem@ipsum.com</a></span>
+              <span>13547 Ventura Blvd #397</span><br>
+              <span>Sherman Oaks CA 91423</span><br>
+              <span>Call: <a href="tel:818.971.9561">818-971-9561</a> </span>
+              <span> Fax: <a href="877.905.70610">877.905.70610</a> </span><br>
+              <span><a href="mailto:lorem@ipsum.com" target="_top">info@shatterproofmodels.com</a></span>
           </p>
           <ul class="newhomesocialmedialinks footerborder">
               <li><a href="javascript:void(0)"><div class="socialmediaiconwrapper"><i class="fa fa-facebook"></i></div></a></li>
