--- a/src/app/model-marketing/model-marketing.component.html
+++ b/src/app/model-marketing/model-marketing.component.html
@@ -19,7 +19,7 @@
     <div class="modelmarketingblockcontentinner">
       <h1>Shatter Proof <br>Models/Talent</h1>
       <p>prides itself in working with an exceptional<br> quality of staff / models / talent which is<br> always our first priority. </p>
-      <a [routerLink]="['/become-a-model/']" target="_blank" class="btndeepred">Apply to be a Shatter Proof Model</a>
+      <a [routerLink]="['/join-the-talent-team/']" target="_blank" class="btndeepred">Apply to be a Shatter Proof Model</a>
     </div>
    </div>
 
@@ -71,7 +71,7 @@
     <div class="modelmarketingblock2_content">
       <p><span class="redtxt">Shatter Proof Models</span> account managers can act faster than most because we do not need to go<br> out to look for staff because they are already in our database and we have a variety<br> to comply with your needs. <span class="pt20">In some cases, we have been able to staff over 45,000<br> hours each year with a 99% success rate and have worked<br> in 8 locations and areas across the United States.</span> <span class="pt20">So far <span class="yellowtxt">Shatter Proof Models</span> has been able to put its staff worldwide promotions<br> with prestigious beverage companies (liquor and non-liquor) such as:<br> Patron | Margarita King | NUVO Vodka | Red Bull | Monster Energy<br> Drink and EX Drinks. Along with that we have been able to provide product<br> placement and talent bookings music video Productions for DJ Khaled | Lil Wayne |<br> Jamie Foxx | Chris Brown | P-Diddy | David Guetta and international print jobs for<br> Windsor catalogue | Maxim | Sports Illustrated | Playboy USA and television commercials<br> for Nike | Xbox | Coca Cola | Adidas and excelled in other levels of media that expand our experience.</span>
       </p>
-      <a class="btnyellow" [routerLink]="['/become-a-model/']" target="_blank">Apply to be a Model</a>
+      <a class="btnyellow" [routerLink]="['/join-the-talent-team/']" target="_blank">Apply to be a Model</a>
     </div>
   </div>
 </div>
