--- a/src/app/model-profile/model-profile.component.html
+++ b/src/app/model-profile/model-profile.component.html
@@ -61,7 +61,7 @@
 
             <div class="doubleborders"></div>
             <div class="form-row btnyellowmt20">
-              <a class="btnyellow" [routerLink]="['/our-models']">View All Models</a>
+              <a class="btnyellow" [routerLink]="['/our-models-talent']">View All Models</a>
             </div>
 
            <!-- <div class="doubleborders"></div>
