--- a/src/app/music-management/music-management.component.html
+++ b/src/app/music-management/music-management.component.html
@@ -49,7 +49,7 @@
           This is a community of tons of artists that can share their talent while interacting with their fans seamlessly. It is a great way for exposure in the music industry as we have quarterly competitions that get you in front of thousands of other artists, fans, and industry promoters!
         </p>
         <div class="btncheckshatterproof mmbtncheckshatterproof">
-          <a [routerLink]="['/partners']" target="_blank" class="btnyellow">About AudioDeadline and Artist XP</a>
+          <a [routerLink]="['/partnerships-affiliates']" target="_blank" class="btnyellow">About AudioDeadline and Artist XP</a>
         </div>
       </div>
     </div>
