--- a/src/app/partners/partners.component.html
+++ b/src/app/partners/partners.component.html
@@ -42,16 +42,21 @@
 <div class="partnersblock3">
    <div class="partnersblock3_wrapper">
     <h1 class="headertitle">We are AudioDeadline</h1>
-    <h3>We are created by artists, for artists</h3>
-    <p class="smalltxt">Our motto is All Rise Together (ART) - and we take pride in building long lasting bonds between artists and their fans. Comprised of music lovers and artists, our mission is to showcase the magical moments of musical creativity - the good, the bad, and the inspiring. Fans will finally get to be live-streamed to the artist’s experience to support them as they go through the emotional mastery of song production! No matter who you are or what you’re doing, we would love for you to be part of our music industry revolution!</p>
-     <h2>The Deadline Experience</h2>
+    <h3>We are created by artists, for artists<!--We are created by artists, for artists--></h3>
+    <p class="smalltxt">Our motto is All Rise Together (ART) – and we take pride in the fact that our event is designed to helps artists, fans and other music enthusiasts move unilaterally in one single direction. Comprised of music lovers and artists, our mission is to showcase the magical moments of musical creativity - the good, the bad, and the inspiring. Fans will finally get to be witness the artist’s experience as they go through the emotional mastery of song production! Regardless of who you are, or what you’re doing, we would love for you to be part of our music industry revolution!<!--Our motto is All Rise Together (ART) - and we take pride in building long lasting bonds between artists and their fans. Comprised of music lovers and artists, our mission is to showcase the magical moments of musical creativity - the good, the bad, and the inspiring. Fans will finally get to be live-streamed to the artist’s experience to support them as they go through the emotional mastery of song production! No matter who you are or what you’re doing, we would love for you to be part of our music industry revolution!--></p>
+     <h2>The Deadline Experience<!--The Deadline Experience--></h2>
      <p>
-       Music lovers around the world come together to experience a truly unique moment in music history. Now, for the first time ever, we are live-streaming <span>EVERYTHING</span> that happens in a sound studio when a song is being made. Our contest winners, step up to the challenge of creating a new original song live in front of all their fans.<br><br>
-       Watch captively as we laugh, cry, and gasp in the magic moments of truly creative work! Get amped up about this one of a kind experience to be amidst these most intimate musical moments of an artist’s career. They only have EIGHT hours to come up with the next big hit! Will they be able to live up to the challenge? Let’s find out!
+       Now, for the first time ever, we are live-streaming <span>EVERYTHING</span> that transpires in a sound studio when a song is being made with Flii Stylz as our host. Our contest winners, from competitions held on ArtistXP, step up to the challenge of creating a new original song live within a time-span of EIGHT hours in front of all their fans. Will they be able to live up to the challenge? Let’s find out!<!--Music lovers around the world come together to experience a truly unique moment in music history. Now, for the first time ever, we are live-streaming <span>EVERYTHING</span> that happens in a sound studio when a song is being made. Our contest winners, step up to the challenge of creating a new original song live in front of all their fans.<br><br>
+       Watch captively as we laugh, cry, and gasp in the magic moments of truly creative work! Get amped up about this one of a kind experience to be amidst these most intimate musical moments of an artist’s career. They only have EIGHT hours to come up with the next big hit! Will they be able to live up to the challenge? Let’s find out!-->
+     </p>
+     <h2>CEO OF AUDIODEADLINE AND ARTISTXP</h2>
+     <p>
+       This event is the brainchild of CEO, Beto Paredes. He is also the creator of the technology, branding and platform that drives the Experience. He is a well-known speaker in the tech industry and has developed very successful projects for 7 of the Inc 500 while his companies have built over 2,000 projects online.
      </p>
      <div class="btncheckshatterproof">
        <div class="btnimgcontent bottomaudideadlinelogo">
          <a class="btnblue" href="https://audiodeadline.com/" target="_blank">Check Out AudioDeadline</a>
+         <a class="btnyellow" href="http://www.betoparedes.com/bio.php" target="_blank">Learn More About Beto Paredes Here</a>
          <img src="../assets/images/logo-partnerspg-audiodeadline.png"  alt="#">
        </div>
      </div>
@@ -59,7 +64,7 @@
 </div>
 
 
-<div class="container-fluid partnersbannerblock2">
+<!--<div class="container-fluid partnersbannerblock2">
   <div class="partnersbannerblock2_wrapper">
     <h2 class="headertitle">Meet the CEO of AudioDeadline and ArtistXP</h2>
     <div class="partnersceo">
@@ -77,6 +82,104 @@
           </p>
           <a href="http://www.betoparedes.com/bio.php" target="_blank">Learn more about Beto Paredes Here</a>
         </div>
+      </div>
+    </div>
+  </div>
+</div>-->
+
+<div class="container-fluid partnersbannerblock2 partnersbannerblock2new">
+  <div class="partnersbannerblock2_wrapper">
+    <h2 class="headertitle">AFFILIATES</h2>
+    <div class="partnersceo">
+      <div class="partnersceosingleblock">
+          <div class="whatweprodiveservice">
+            <div class="whatweprodivesingleservice">
+              <div class="whatweprodivesingleserviceimgwrapper">
+                <img alt="#" src="../assets/images/logo-casting-networks.jpg">
+              </div>
+              <h2>Casting <span>Networks</span></h2>
+            </div>
+            <div class="whatweprodivesingleservice">
+              <div class="whatweprodivesingleserviceimgwrapper">
+                <img alt="#" src="../assets/images/logo-celebrity-vapes.png">
+              </div>
+              <h2>Celebrity <span>Vapes</span></h2>
+            </div>
+
+            <div class="whatweprodivesingleservice">
+              <div class="whatweprodivesingleserviceimgwrapper">
+                <img alt="#" src="../assets/images/logo-empire-distribution.png">
+              </div>
+              <h2>Empire <span>Distribution</span></h2>
+            </div>
+            <div class="whatweprodivesingleservice">
+              <div class="whatweprodivesingleserviceimgwrapper">
+                <img alt="#" src="../assets/images/logo-evolve-photo.png">
+              </div>
+              <h2>Evolve <span>Photo</span></h2>
+            </div>
+
+            <div class="whatweprodivesingleservice">
+              <div class="whatweprodivesingleserviceimgwrapper">
+                <img alt="#" src="../assets/images/logo-jalex-photos.png">
+              </div>
+              <h2>JAlex <span>Photos</span></h2>
+            </div>
+            <div class="whatweprodivesingleservice">
+              <div class="whatweprodivesingleserviceimgwrapper">
+                <img alt="#" src="../assets/images/logo-champaign-championz.png">
+              </div>
+              <h2>Champaign <span>Championz</span></h2>
+            </div>
+
+            <div class="whatweprodivesingleservice">
+              <div class="whatweprodivesingleserviceimgwrapper">
+                <img alt="#" src="../assets/images/logo-brittbrat-productions.png">
+              </div>
+              <h2>Britt Brat <span>Productions</span></h2>
+            </div>
+            <div class="whatweprodivesingleservice">
+              <div class="whatweprodivesingleserviceimgwrapper">
+                <img alt="#" src="../assets/images/logo-urbansoul-photography.png">
+              </div>
+              <h2>Urban Soul <span>Photography</span></h2>
+            </div>
+
+            <div class="whatweprodivesingleservice">
+              <div class="whatweprodivesingleserviceimgwrapper">
+                <img alt="#" src="../assets/images/logo-tiellemakeup-artistry.png">
+              </div>
+              <h2>Tielle Makeup <span>Artistry</span></h2>
+            </div>
+            <div class="whatweprodivesingleservice">
+              <div class="whatweprodivesingleserviceimgwrapper">
+                <img alt="#" src="../assets/images/logo-snab-production.png">
+              </div>
+              <h2>Snab <span>Productions</span></h2>
+            </div>
+
+           </div>
+
+
+          <!--<ul>
+            <li>
+              <div class="affiliateblock">
+                <div class="affiliateblockimg">
+                  <img src="../assets/images/logo-casting-networks.png"  alt="#">
+                </div>
+                <span></span>
+              </div>
+            </li>
+            <li><span></span></li>
+            <li><span></span></li>
+            <li><span>Evolve Photo</span></li>
+            <li><span>JAlex Photos</span></li>
+            <li><span>Champaign Championz</span></li>
+            <li><span>Britt Brat Productions</span></li>
+            <li><span>Urban Soul Photography</span></li>
+            <li><span>Tielle Makeup Artistry</span></li>
+            <li><span>Snab Productions</span></li>
+          </ul>-->
       </div>
     </div>
   </div>
