--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3302,6 +3302,7 @@ body{
 .newhome_about_wrapper h2 span{ color: #d40470; text-transform: uppercase;}
 
 .newhome_about_wrapper h2 strong{ font-weight: normal; color: #f89b19;}
+.newhome_about_wrapper h2 strong a{ font-weight: normal; color: #f89b19 !important;}
 
 .newhome_about_wrapper p{ margin: 30px 0 0 0; padding: 0px; font-size: 18px; color: #b2b1bc; font-family: 'CenturyGothic'; }
 
@@ -3799,6 +3800,21 @@ body{
 }
 
 .newhome_sproofmodeldiv h3 { margin: 0; padding: 0; font-size: 30px; color: #a42dc2; font-weight: normal; font-family: 'CenturyGothicBold'; line-height: 30px; display: block; position: relative; z-index: 99;}
+
+.newhome_sproofmodeldiv h3 .btnred {
+	background-color: #df3a3a;
+	color: #fff;
+	font-family: 'CenturyGothicBold';
+	font-size: 16px;
+	line-height: 24px;
+	padding: 4px 8px;
+	border: none;
+	text-transform: uppercase;
+	display: inline-block;
+	text-align: center;
+	cursor: pointer;
+	margin-left:10px;
+}
 
 .newhome_sproofmodeldiv p{
 	margin: 14px 0 0 0;
@@ -5454,8 +5470,9 @@ body{
 }
 .btnimgcontent img{margin-left: 50px;}
 .btnimgcontent.bottomaudideadlinelogo img {
-	margin-left: 50px;
+	margin-left: 20px;
 	margin-top: -28px;
+	width: 260px;
 }
 
 /*----End of Partners---*/
@@ -7691,3 +7708,77 @@ p.headertitlepara{
 	top: 2px; background: url(../images/imagedelete.png) center center; background-size: 100%; width: 25px; height: 25px; border: none; font-size: 0px; opacity: 0.7;}
 
 .uploadthumimgbox_span{ width: 226px; height: 226px;  display: table-cell; text-align: center; vertical-align: middle;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*----added css--*/
+
+.btncheckshatterproof .btnimgcontent.bottomaudideadlinelogo a{margin-right:5px;}
+
+.partnersbannerblock2new .formdivwrapper ul{
+	justify-content: flex-start;
+	display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	flex-wrap: wrap;
+	-webkit-box-align: center;
+	-moz-box-align: center;
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	align-items: center;
+
+}
+.partnersbannerblock2new .whatweprodivesingleservice{
+	width: 48%;
+	margin-bottom: 20px;
+}
+
+
+.partnersbannerblock2new .whatweprodivesingleservice h2 {
+	margin: 0px;
+	padding: 0;
+	font-family: "CenturyGothicBold";
+	font-size: 32px;
+	color: #fe005a;
+	position: relative;
+	z-index: 9;
+	text-transform: uppercase;
+	margin: 0px;
+	padding: 0px;
+	width: 65% !important;
+}
+
+.partnersbannerblock2new .whatweprodivesingleservice h2 span{
+	color: #fff;
+}
+
+.partnersbannerblock2new .whatweprodivesingleserviceimgwrapper{
+	background-color: #fff;
+	padding: 10px;
+	width: 30%;
+	height: 66px;
+	position: relative;
+}
+
+.partnersbannerblock2new .whatweprodivesingleserviceimgwrapper img {
+	width: 94%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
