--- a/src/app/oldheader/oldheader.component.html
+++ b/src/app/oldheader/oldheader.component.html
@@ -37,7 +37,7 @@
         </div>
         <div class="s_shatter_socialmedia">
           <ul>
-            <li> <a href="javascript:void(0);" class="s_login">Log in</a></li>
+            <li> <a href="javascript:void(0);" class="s_login" [attr.href]="apiservice.loginurl">Log in</a></li>
             <li> <a href="javascript:void(0);"><img src="../assets/images/s_facebook.png"></a></li>
             <li><a href="javascript:void(0);"><img src="../assets/images/s_instagram.png"></a></li>
             <li><a href="javascript:void(0);"><img src="../assets/images/s_twitter.png"></a></li>
