--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -20,7 +20,8 @@
               <li><a [routerLink]="['/clients-campaigns']">Clients & Campaigns<!--Marketing Management--></a></li>
               <li><a [routerLink]="['/music-division']">Music Division</a></li>
               <li><a [routerLink]="['/contact-us']">Contact Us</a></li>
-              <li><a [routerLink]="['']">Login</a></li>
+          <!--    <li><a href={{apiservic.loginurl}}>Login</a></li>-->
+              <li><a [attr.href]=apiservic.loginurl>Login</a></li>
           </ul>
       </div>
       <div class="col-md-3">
