--- a/src/app/sidemenu/sidemenu.component.html
+++ b/src/app/sidemenu/sidemenu.component.html
@@ -32,7 +32,7 @@
 
     <li><a [routerLink]="['/music-division']">Music Division<!--Music Management --><i class="fa fa-chevron-right"></i></a></li>
     <li><a href="javascript:void(0)">Calendar<i class="fa fa-chevron-right"></i></a></li>
-    <li><a [routerLink]="['/contact-us']">Contact Us <i class="fa fa-chevron-right"></i></a></li><li><a [routerLink]="['']">Login <i class="fa fa-chevron-right"></i></a></li>
+    <li><a [routerLink]="['/contact-us']">Contact Us <i class="fa fa-chevron-right"></i></a></li><li><a href="{{apiService.loginurl}}">Login <i class="fa fa-chevron-right"></i></a></li>
   </ul>
   </div>
 
