--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -21,7 +21,7 @@
               <li><a [routerLink]="['/music-division']">Music Division</a></li>
               <li><a [routerLink]="['/contact-us']">Contact Us</a></li>
           <!--    <li><a href={{apiservic.loginurl}}>Login</a></li>-->
-              <li><a [attr.href]=apiservic.loginurl>Login</a></li>
+              <li><a target="_blank" [attr.href]=apiservic.loginurl >Login</a></li>
           </ul>
       </div>
       <div class="col-md-3">
