--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -34,10 +34,10 @@
               <span><a href="mailto:lorem@ipsum.com" target="_top">info@shatterproofmodels.com</a></span>
           </p>
           <ul class="newhomesocialmedialinks footerborder">
-              <li><a href="javascript:void(0)"><div class="socialmediaiconwrapper"><i class="fa fa-facebook"></i></div></a></li>
-              <li><a href="javascript:void(0)"><div class="socialmediaiconwrapper"><i class="fa fa-twitter"></i></div></a></li>
-              <li><a href="javascript:void(0)"><div class="socialmediaiconwrapper"><i class="fa fa-linkedin"></i></div></a></li>
-              <li><a href="javascript:void(0)"><div class="socialmediaiconwrapper"><i class="fa fa-instagram"></i></div></a></li>
+              <li><a href="www.facebook.com/shatterblok" target="_blank"><div class="socialmediaiconwrapper"><i class="fa fa-facebook"></i></div></a></li>
+              <li><a href="www.twitter.com/shatterblok" target="_blank"><div class="socialmediaiconwrapper"><i class="fa fa-twitter"></i></div></a></li>
+              <!--<li><a href="javascript:void(0)"><div class="socialmediaiconwrapper"><i class="fa fa-linkedin"></i></div></a></li>-->
+              <li><a href="www.instagram.com/shatterblok" target="_blank"><div class="socialmediaiconwrapper"><i class="fa fa-instagram"></i></div></a></li>
           </ul>
       </div>
   </div>
