--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+b<app-header></app-header>
 
 
 <app-sidemenu></app-sidemenu>
@@ -259,7 +259,7 @@
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/LdE3WlQ__GY?rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
-            <h3><!--We get our models on to music videos on consistent basis.-->We get our Models | Talent and Clients into major artist’s <br>music video productions.<a [routerLink]="['/music-division']" target="_blank" class="btnred">Music Video Bookings</a></h3>
+            <h3><!--We get our models on to music videos on consistent basis.-->We get our Models | Talent and Clients into major artist’s <br>music video productions.<a [routerLink]="['/booked-work']" target="_blank" class="btnred">Music Video Bookings</a></h3>
             <p>
                 <!--<span>Shatter Proof Models</span> is the division that handles  commercial modeling talent for publications, product & branding promotions and places talent public career enhancements such as major music videos, TV commercials, and small & big screen motion pictures.-->
                 <span>Shatter Proof Models | Talent</span> is the division that handles commercial modeling | talent for
