--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -31,7 +31,10 @@
               <span>Sherman Oaks CA 91423</span><br>
               <span>Call: <a href="tel:818.971.9561">818-971-9561</a> </span>
               <span> Fax: <a href="877.905.70610">877.905.70610</a> </span><br>
-              <span><a href="mailto:lorem@ipsum.com" target="_top">info@shatterproofmodels.com</a></span>
+              <span *ngIf="router.url=='/model-talent-division'"><a>info@shatterproofmodels.com</a></span>
+              <span *ngIf="router.url=='/music-division'"><a>info@shatterproofmusicgroup.com</a></span>
+              <span *ngIf="router.url=='/clients-campaigns'"><a>info@shattermarketing.com</a></span>
+              <span *ngIf="router.url!='/music-division' && router.url!='/model-talent-division' && router.url !='/clients-campaigns'"><a>info@shatterblok.com</a></span>
           </p>
           <ul class="newhomesocialmedialinks footerborder">
               <li><a href="https://www.facebook.com/shatterblok/" target="_blank"><div class="socialmediaiconwrapper"><i class="fa fa-facebook"></i></div></a></li>
@@ -46,7 +49,7 @@
 <div class="container-fluid newhome_copyrightdiv text-center">
     <div class="newhome_copyrightdiv_wrapper">
         <div class="col-md-12">
-            <p>Copyright © 2018 Shatter Blok - All Rights Reserved. <span>Powered by GoDaddy</span></p>
+            <p>Copyright © 2018 Shatter Blok - All Rights Reserved.<br> <span>Powered by <img class="img-responsive" src="../assets/images/artistheaderlogo_ftnew.png" style="height: 30px; width: auto;"></span></p>
         </div>
     </div>
 </div>
