--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3302,7 +3302,7 @@ body{
 .newhome_about_wrapper h2 span{ color: #d40470; text-transform: uppercase;}
 
 .newhome_about_wrapper h2 strong{ font-weight: normal; color: #f89b19;}
-.newhome_about_wrapper h2 strong a{ font-weight: normal; color: #f89b19 !important;}
+.newhome_about_wrapper h2 strong a{ font-weight: normal; color: #f89b19;}
 
 .newhome_about_wrapper p{ margin: 30px 0 0 0; padding: 0px; font-size: 18px; color: #b2b1bc; font-family: 'CenturyGothic'; }
 
@@ -3312,7 +3312,8 @@ body{
 
 
 
-
+.newhome_about_wrapper strong a{color:#fff !important}
+.newhome_about_wrapper strong a:hover{color:#000 !important}
 
 
 
@@ -4253,11 +4254,15 @@ body{
 	margin: 0px auto;
 }
 
-.newhome_copyrightdiv_wrapper p span{
-	display: block;
+.newhome_copyrightdiv_wrapper p span {
+	display: inline-flex;
 	color: #757b87;
-	margin-top: 3px;
+	margin-top: 7px;
 	font-size: 14px;
+}
+
+.newhome_copyrightdiv_wrapper p span img{
+	margin-left: 5px;
 }
 
 .newhome_copyrightdiv_wrapper p{
