--- a/src/app/musicvideos/musicvideos.component.html
+++ b/src/app/musicvideos/musicvideos.component.html
@@ -19,7 +19,7 @@
     </div>
     <h2>Music Video Bookings</h2>
     <p>We Get Our Models on Music Videos on Consistent Basis!
-      Check out some of the music videos we  have associated with
+      <!--Check out some of the music videos we  have associated with-->
     </p>
   </div>
 </div>
