--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,6 +3,7 @@
       <div class="col-md-6">
           <div class="newhomefooterlogo">
               <img src="../assets/images/shaterblockLogo-ftnew.png" class="newhomenewhomefooterlogo">
+              <img src="../assets/images/shaterblockLogo-ftnewsml.png" class="newhomenewhomefooterlogo newhomenewhomefooterlogosml">
           </div>
           <!--<div class="newhomenewsletterblogwrapper">
               <form action="#" method="post" accept-charset="utf-8" id="newhomenewsletterblog">
