--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4216,6 +4216,7 @@ body{
 	margin-right: 10px;
 }
 .newhomesocialmedialinks li:last-child{margin-right: 0px;}
+.newhomenewhomefooterlogo.newhomenewhomefooterlogosml{display:none;}
 
 .socialmediaiconwrapper .fa-facebook{color:#4267b2;}
 .socialmediaiconwrapper .fa-twitter{color:#1da1f2;}
